tests/src/frontend/syntax/invalid/parens_semicolon.sk
fun main(): String {
  (x = 100; "No")
}
